--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>JS_PROJECT</title>
+    <link rel="stylesheet" type="text/css" href="sheet.css">
+    <script type="text/javascript" rel="script" src="script.js"></script>
+
+
 </head>
 <body>
 
