--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <title>JS_PROJECT</title>
     <link rel="stylesheet" type="text/css" href="sheet.css">
-    <script type="text/javascript" rel="script" src="script.js"></script>
-
-
 </head>
 <body>
-    <div id="square"></div>
+    <canvas id="myCanvas"></canvas>
+
+    <script type="text/javascript" rel="script" src="script.js"></script>
 </body>
 </html>
